# LabelCatheter

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  auto_install.sh  auto_uninstall.sh  main.cpp
cmake/configs/: CornsnakeConfig.cmake.in  SetPlatformVars.cmake  config.h.in
include/: bspline.h  csv.h
include/extra/: pango_display.h  pango_drawer.h
osx/: auto_install.command
osx/LabelCatheter.app/Contents/: Info.plist  document.wflow
src/: label_catheter.cpp  main.cpp  video_exporter.cpp
